--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "airtable": "^0.11.1",
+    "ansi-regex": "^6.0.1",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-currency-input": "^1.0.1",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-web": "0.17.1"
   },
